@@ -26,12 +26,8 @@ Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
 #ifndef INCL_OBJS
 #define INCL_OBJS	1
 
-#if (defined(DOS) || defined(XWIN))
-
-#else
-
+#ifdef WIN32
 #define Rectangle RECTX
-
 #endif
 
 #include <string>	// STL string
